Added correct fonts and a content partial

--- a/index.html
+++ b/index.html
@@ -11,19 +11,22 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Narrow:wght@400;500&family=Open+Sans:wght@300;400;500&display=swap" rel="stylesheet" />
     <title>CSS Frameworks - MA1</title>
   </head>
   <body>
     <nav class="nav navbar navbar-light navbar-expand-md fixed-top">
       <div class="nav__container container">
-        <a class="nav__container__logo navbar-brand" href="#">MA1</a>
-        <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+        <a class="nav__logo navbar-brand" href="#">MA1</a>
+        <button class="nav__btn navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navlist navbar-nav ml-auto">
-            <li class="navlist__item nav-item"><a class="navlist__item__link navlist__item__link--active nav-link" href="#">Home</a></li>
-            <li class="navlist__item nav-item"><a class="navlist__item__link nav-link" href="#">About</a></li>
+            <li class="navlist__item nav-item"><a class="navlist__link navlist__link--active nav-link" href="#">Home</a></li>
+            <li class="navlist__item nav-item"><a class="navlist__link nav-link" href="#">About</a></li>
           </ul>
         </div>
       </div>
@@ -31,36 +34,36 @@
     <h1 class="title text-center">Page heading</h1>
     <div class="container main-container">
       <div class="row">
-        <div class="square-container col-md-6 col-lg-4 col-xl-3">
-          <div class="square-container__square mx-auto"></div>
+        <div class="square col-md-6 col-lg-4 col-xl-3">
+          <div class="square__content mx-auto"></div>
         </div>
-        <div class="square-container col-md-6 col-lg-4 col-xl-3">
-          <div class="square-container__square mx-auto"></div>
+        <div class="square col-md-6 col-lg-4 col-xl-3">
+          <div class="square__content mx-auto"></div>
         </div>
-        <div class="square-container col-md-6 col-lg-4 col-xl-3">
-          <div class="square-container__square square-container__square--white mx-auto"></div>
+        <div class="square col-md-6 col-lg-4 col-xl-3">
+          <div class="square__content square__content--white mx-auto"></div>
         </div>
-        <div class="square-container col-md-6 col-lg-4 col-xl-3">
-          <div class="square-container__square mx-auto"></div>
+        <div class="square col-md-6 col-lg-4 col-xl-3">
+          <div class="square__content mx-auto"></div>
         </div>
-        <div class="square-container col-md-6 col-lg-4 col-xl-3">
-          <div class="square-container__square mx-auto"></div>
+        <div class="square col-md-6 col-lg-4 col-xl-3">
+          <div class="square__content mx-auto"></div>
         </div>
-        <div class="square-container col-md-6 col-lg-4 col-xl-3">
-          <div class="square-container__square square-container__square--grey mx-auto"></div>
+        <div class="square col-md-6 col-lg-4 col-xl-3">
+          <div class="square__content square__content--pink mx-auto"></div>
         </div>
-        <div class="square-container col-md-6 col-lg-4 col-xl-3">
-          <div class="square-container__square mx-auto"></div>
+        <div class="square col-md-6 col-lg-4 col-xl-3">
+          <div class="square__content mx-auto"></div>
         </div>
-        <div class="square-container col-md-6 col-lg-4 col-xl-3">
-          <div class="square-container__square square-container__square--white mx-auto"></div>
+        <div class="square col-md-6 col-lg-4 col-xl-3">
+          <div class="square__content square__content--white mx-auto"></div>
         </div>
       </div>
     </div>
     <footer class="footer fixed-bottom">
-      <div class="footer__container container d-flex justify-content-between align-items-center">
-        <span class="footer__container__span">hello@email.com</span>
-        <a class="footer__container__link" href="#">Copyright 2020</a>
+      <div class="footcont container d-flex justify-content-between align-items-center">
+        <span class="footcont__span">hello@email.com</span>
+        <a class="footcont__link" href="#">Copyright 2020</a>
       </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
